--- a/projects/angular/src/forms/combobox/_properties.combobox.scss
+++ b/projects/angular/src/forms/combobox/_properties.combobox.scss
@@ -6,6 +6,7 @@
  */
 @use '../../utils/mixins';
 @use '@cds/core/tokens/tokens.scss';
+@use '../../layout/density';
 
 @include mixins.exports('combobox.properties') {
   :root [cds-theme] {
@@ -29,11 +30,11 @@
     --clr-combobox-trigger-font-color: #{tokens.$cds-alias-object-interaction-color};
     --clr-combobox-hover-background-color: #{tokens.$cds-alias-object-interaction-background-hover};
     --clr-combobox-active-background-color: #{tokens.$cds-alias-object-interaction-background-active};
-    --clr-combobox-pill-padding: 0 #{tokens.$cds-global-space-3};
+    --clr-combobox-pill-padding: 0 #{density.$clr-base-horizontal-offset-s};
     --clr-combobox-pill-margin: #{tokens.$cds-global-space-3} #{tokens.$cds-global-space-3} 0 0;
     --clr-combobox-pill-height: #{tokens.$cds-global-space-7}; //16px
     --clr-combobox-pill-remove-icon-color: #{tokens.$cds-alias-object-interaction-color};
-    --clr-combobox-caret-icon-size: #{tokens.$cds-global-space-7};
+    --clr-combobox-caret-icon-size: #{density.$clr-base-icon-size-s};
     --clr-combobox-pill-border-radius: #{tokens.$cds-alias-object-border-radius-100};
   }
 }
