--- a/projects/angular/src/forms/styles/_containers.clarity.scss
+++ b/projects/angular/src/forms/styles/_containers.clarity.scss
@@ -12,7 +12,7 @@
 
 @include mixins.exports('forms.containers') {
   .clr-form-control {
-    margin-top: calc(4 * #{forms-variables.$clr-forms-baseline});
+    margin-top: density.$clr-base-vertical-offset-2xl;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -134,10 +134,6 @@
     }
     &.clr-row .clr-control-label {
       width: auto;
-    }
-
-    .clr-control-label {
-      margin-top: density.$clr-base-gap-xs;
     }
 
     .clr-form-control {
