update gap token

--- a/projects/angular/src/layout/nav/_nav.clarity.scss
+++ b/projects/angular/src/layout/nav/_nav.clarity.scss
@@ -21,7 +21,7 @@
     width: 100%;
     white-space: nowrap;
     box-shadow: subnav-variables.$clr-nav-shadow;
-    gap: density.$clr-base-gap-xs;
+    gap: density.$clr-base-gap-l;
 
     .nav-item {
       display: inline-block;
