--- a/projects/angular/src/layout/tabs/_tabs.clarity.scss
+++ b/projects/angular/src/layout/tabs/_tabs.clarity.scss
@@ -54,9 +54,6 @@
     }
 
     .btn {
-      line-height: mixins.baselinePx(20);
-      font-size: tokens.$cds-alias-typography-font-size-4;
-      padding: tokens.$cds-global-space-5 tokens.$cds-global-space-6;
       border-radius: tokens.$cds-global-space-0;
     }
   }
@@ -81,10 +78,10 @@
       box-shadow: none;
       flex-direction: column;
       align-items: stretch;
-      margin-right: tokens.$cds-global-space-9;
+      margin-right: density.$clr-base-vertical-offset-2xl;
       overflow: auto;
       flex-shrink: 0;
-      padding: tokens.$cds-global-space-3;
+      padding: density.$clr-base-vertical-offset-xs density.$clr-base-horizontal-offset-xs;
       width: mixins.baselinePx(240);
       min-width: tokens.$cds-global-space-12;
 
@@ -92,7 +89,7 @@
 
       .nav-link {
         text-align: left;
-        padding: 0 tokens.$cds-global-space-6;
+        padding: 0 density.$clr-base-vertical-offset-l;
         border: none;
         flex-shrink: 0;
         margin-top: 0;
@@ -100,7 +97,7 @@
         width: 100%;
 
         &.btn {
-          margin-bottom: tokens.$cds-global-space-1;
+          margin-bottom: density.$clr-base-horizontal-offset-2xs;
           justify-content: start;
         }
 
