--- a/projects/angular/src/layout/density/_variables.density.scss
+++ b/projects/angular/src/layout/density/_variables.density.scss
@@ -95,4 +95,11 @@ $clr-base-layout-space-4xl: var(--clr-base-layout-space-4xl);
 $clr-base-layout-space-5xl: var(--clr-base-layout-space-5xl);
 
 $clr-base-icon-tooltip: var(--clr-base-icon-tooltip);
-$clr-base-spinner-72: var(--clr-base-icon-spinner-72);
+
+$clr-base-spinner-18: var(--clr-base-spinner-18);
+$clr-base-spinner-64: var(--clr-base-spinner-64);
+$clr-base-spinner-72: var(--clr-base-spinner-72);
+
+$clr-base-spinner-stroke-s: var(--clr-base-spinner-stroke-s);
+$clr-base-spinner-stroke-m: var(--clr-base-spinner-stroke-m);
+$clr-base-spinner-stroke-l: var(--clr-base-spinner-stroke-l);
