--- a/projects/angular/src/progress/spinner/_properties.spinner.scss
+++ b/projects/angular/src/progress/spinner/_properties.spinner.scss
@@ -6,19 +6,20 @@
  */
 @use '../../utils/mixins';
 @use '@cds/core/tokens/tokens.scss';
+@use '../../layout/density/variables.density' as density;
 
 @include mixins.exports('spinner.properties') {
   :root [cds-theme] {
-    --clr-spinner-default-size: #{tokens.$cds-global-space-14};
-    --clr-spinner-medium-size: #{tokens.$cds-global-space-11};
-    --clr-spinner-small-size: #{tokens.$cds-global-space-8};
+    --clr-spinner-default-size: #{density.$clr-base-spinner-72};
+    --clr-spinner-medium-size: #{density.$clr-base-spinner-64};
+    --clr-spinner-small-size: #{density.$clr-base-spinner-18};
 
     --clr-spinner-inside-button-stroke-width: #{tokens.$cds-alias-object-border-width-100};
     --clr-spinner-inside-treeview-stroke-width: #{tokens.$cds-alias-object-border-width-100};
 
-    --clr-spinner-default-stroke-width: #{tokens.$cds-global-space-4};
-    --clr-spinner-medium-stroke-width: #{tokens.$cds-alias-object-border-width-400};
-    --clr-spinner-small-stroke-width: #{tokens.$cds-alias-object-border-width-200};
+    --clr-spinner-default-stroke-width: #{density.$clr-base-spinner-stroke-l};
+    --clr-spinner-medium-stroke-width: #{density.$clr-base-spinner-stroke-m};
+    --clr-spinner-small-stroke-width: #{density.$clr-base-spinner-stroke-s};
 
     --clr-spinner-fill-bg-color: #{tokens.$cds-alias-object-container-background-shade};
     --clr-spinner-fill-inverse-bg-color: #{tokens.$cds-alias-object-container-background-inverse-tint};
