--- a/projects/angular/src/layout/density/_variables.density.scss
+++ b/projects/angular/src/layout/density/_variables.density.scss
@@ -96,9 +96,9 @@ $clr-base-layout-space-5xl: var(--clr-base-layout-space-5xl);
 
 $clr-base-icon-tooltip: var(--clr-base-icon-tooltip);
 
-$clr-base-spinner-18: var(--clr-base-spinner-18);
-$clr-base-spinner-64: var(--clr-base-spinner-64);
-$clr-base-spinner-72: var(--clr-base-spinner-72);
+$clr-base-spinner-s: var(--clr-base-spinner-s);
+$clr-base-spinner-m: var(--clr-base-spinner-m);
+$clr-base-spinner-l: var(--clr-base-spinner-l);
 
 $clr-base-spinner-stroke-s: var(--clr-base-spinner-stroke-s);
 $clr-base-spinner-stroke-m: var(--clr-base-spinner-stroke-m);
