feat(card): apply density tokens lint fix

--- a/projects/angular/src/layout/_card.clarity.scss
+++ b/projects/angular/src/layout/_card.clarity.scss
@@ -56,7 +56,7 @@
     @extend %card-border-appearance;
 
     .alert {
-      @extend %card-space-between;;
+      @extend %card-space-between;
     }
 
     .btn-link {
