feat(progress-bar): added new token for progress bar height

--- a/projects/angular/src/layout/density/_variables.density.scss
+++ b/projects/angular/src/layout/density/_variables.density.scss
@@ -103,3 +103,5 @@ $clr-base-spinner-l: var(--clr-base-spinner-l);
 $clr-base-spinner-stroke-s: var(--clr-base-spinner-stroke-s);
 $clr-base-spinner-stroke-m: var(--clr-base-spinner-stroke-m);
 $clr-base-spinner-stroke-l: var(--clr-base-spinner-stroke-l);
+
+$clr-base-progress-bar-height: var(--clr-base-progress-bar-height);
